@@ -28,6 +28,7 @@ option(TUNERS "Enable compilation of the tuners" OFF)
 option(CLIENTS "Enable compilation of the clients to test and compare performance" OFF)
 option(TESTS "Enable compilation of the correctness tests" OFF)
 option(NETLIB "Enable compilation of the CBLAS Netlib API" OFF)
+option(CUBLAS "Enables performance comparison against cuBLAS on NVIDIA GPUs" OFF)
 
 # Compile in verbose mode with additional diagnostic messages
 option(VERBOSE "Compile in verbose mode for additional diagnostic messages" OFF)
@@ -134,14 +135,16 @@ endif()
 if(CLIENTS OR TESTS)
   find_package(clBLAS)
   find_package(CBLAS)
-  find_package(cuBLAS)
-  if(NOT CLBLAS_FOUND AND NOT CBLAS_FOUND AND NOT CUBLAS_FOUND)
+  if(CUBLAS)
+    find_package(cuBLAS)
+  endif()
+  if(NOT CLBLAS_FOUND AND NOT CBLAS_FOUND)
     if(TESTS)
-      message(STATUS "Could NOT find clBLAS nor a CPU BLAS nor cuBLAS, disabling the compilation of the tests")
+      message(STATUS "Could NOT find clBLAS nor a CPU BLAS, disabling the compilation of the tests")
       set(TESTS OFF)
     endif()
     if(CLIENTS)
-      message(STATUS "Could NOT find clBLAS nor a CPU BLAS nor cuBLAS, head-to-head performance comparison not supported in the clients")
+      message(STATUS "Could NOT find clBLAS nor a CPU BLAS, head-to-head performance comparison not supported in the clients")
     endif()
   endif()
 endif()
